tests/paczka1/small_fuzzy/34668537.err
Error in line 1: JzXzi5ScI A352 40,4
Error in line 4: E1MbMxi A587 13,5
Error in line 3: FlILI2mh4 S988 50,2
